- Added contactus, and other footer pages - Completed phase 1 support for movement rankings - Partially completed move ranking support (added moverank view, controller, service) - Added MoveController api calls to support get all of a move by name - Adjust models and DTOs to have character name where necessary as well as FirstActionableFrame to an int and Value to a double where needed - Removed use of EntityToBusinessConverter as that approach wasn't working since a charactername is now needed (can't just copy the property over for this one, maybe stored procedures in the future for this so I can back to the converter and get the char name automatically)

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/character.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/character.html
@@ -19,7 +19,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="item in movementData" ng-click="go(item)">
+                    <tr ng-repeat="item in movementData" ng-click="goToMovementRanking(item)">
                         <td>{{item.name}}</td>
                         <td>{{item.value}}</td>
                     </tr>
@@ -45,7 +45,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="item in moveData">
+                    <tr ng-repeat="item in moveData" ng-click="goToMoveRanking(item)">
                         <td>{{item.name}}</td>
                         <td>{{item.hitboxActive}}</td>
                         <td>{{item.firstActionableFrame}}</td>
