--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/moveRanks.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/moveRanks.html
@@ -1,40 +1,55 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
-    <h2>{{moveName}} (Ordered by First Actionable Frame)</h2>
+    <h2>{{moveName}}</h2>
     <br />
     <br />
-    <!--<div class="btn-group btn-group-justified">
-        <input type="radio" class="btn btn-default" ng-model="moveOrder" ng-value="order" />Ascending
-        <input type="radio" class="btn btn-default" name="order" ng-value="Descending" />Ascending
-    </div>-->
+    <h6>Sorting by: {{predicate}}</h6>
     <table class="table table-hover">
         <thead>
             <tr>
                 <th>Character</th>
-                <th>CharName</th>
-                <th>Name</th>
-                <th>HitboxActive</th>
-                <th>FirstActionableFrame</th>
-                <th>BaseDamage</th>
-                <th>Angle</th>
-                <th>BaseKnockbackSetKnockback</th>
-                <th>KnockbackGrowth</th>
-                <th>Type</th>
-                <th>LandingLag</th>
-                <th>AutoCancel</th>
+                <th>
+                    <a href="" ng-click="order('hitboxActive')">HitboxActive</a>
+                    <span ng-show="predicate === 'hitboxActive'" ng-class="{reverse:reverse}"></span>
+                </th>
+                <th>
+                    <a href="" ng-click="order('firstActionableFrame')">FirstActionableFrame</a>
+                    <span ng-show="predicate === 'firstActionableFrame'" ng-class="{reverse:reverse}"></span>
+                </th>
+                <th>
+                    <a href="" ng-click="order('baseDamage')">BaseDamage</a>
+                    <span ng-show="predicate === 'baseDamage'" ng-class="{reverse:reverse}"></span>
+                </th>
+                <th>
+                    <a href="" ng-click="order('angle')">Angle</a>
+                    <span ng-show="predicate === 'angle'" ng-class="{reverse:reverse}"></span>
+                </th>
+                <th>
+                    <a href="" ng-click="order('baseKnockBackSetKnockback')">BaseKnockbackSetKnockback</a>
+                    <span ng-show="predicate === 'baseKnockBackSetKnockback'" ng-class="{reverse:reverse}"></span>
+                </th>
+                <th>
+                    <a href="" ng-click="order('knockbackGrowth')">KnockbackGrowth</a>
+                    <span ng-show="predicate === 'knockbackGrowth'" ng-class="{reverse:reverse}"></span>
+                </th>
+                <th>
+                    <a href="" ng-click="order('landingLag')">LandingLag</a>
+                    <span ng-show="predicate === 'landingLag'" ng-class="{reverse:reverse}"></span>
+                </th>
+                <th>
+                    <a href="" ng-click="order('autoCancel')">AutoCancel</a>
+                    <span ng-show="predicate === 'autoCancel'" ng-class="{reverse:reverse}"></span>
+                </th>
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in moveData | orderBy: '-characterName'">
+            <tr ng-repeat="item in moveData | orderBy:predicate:reverse">
                 <td><img width="70" height="70" ng-src="{{item.characterThumbnailUrl}}" /></td>
-                <td>{{item.characterName}}</td>
-                <td>{{item.name}}</td>
                 <td>{{item.hitboxActive}}</td>
                 <td>{{item.firstActionableFrame}}</td>
                 <td>{{item.baseDamage}}</td>
                 <td>{{item.angle}}</td>
                 <td>{{item.baseKnockBackSetKnockback}}</td>
                 <td>{{item.knockbackGrowth}}</td>
-                <td>{{item.type}}</td>
                 <td>{{item.landingLag}}</td>
                 <td>{{item.autoCancel}}</td>
             </tr>
