- Added ability to go to characters from rankings - Mobile support added via response design (only in roster for now) - CharacterController.GetCharacters() now orders results by ascending alphabetical Name

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/movementRanks.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/movementRanks.html
@@ -11,7 +11,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in movementData | orderBy:predicate:reverse">
+            <tr ng-repeat="item in movementData | orderBy:predicate:reverse" ng-click="goToCharacter(item)">
                 <td><img width="70" height="70" ng-src="{{item.characterThumbnailUrl}}" /></td>
                 <td>{{item.value}}</td>
             </tr>
