--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/moveRanks.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/moveRanks.html
@@ -6,7 +6,10 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th>Character</th>
+                <th>
+                    <a href="" ng-click="order('characterName')">Character</a>
+                    <span ng-show="predicate === 'characterName'" ng-class="{reverse:reverse}"></span>
+                </th>
                 <th>
                     <a href="" ng-click="order('hitboxActive')">HitboxActive</a>
                     <span ng-show="predicate === 'hitboxActive'" ng-class="{reverse:reverse}"></span>
@@ -42,7 +45,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in moveData | orderBy:predicate:reverse">
+            <tr ng-repeat="item in moveData | orderBy:predicate:reverse" ng-click="goToCharacter(item)">
                 <td><img width="70" height="70" ng-src="{{item.characterThumbnailUrl}}" /></td>
                 <td>{{item.hitboxActive}}</td>
                 <td>{{item.firstActionableFrame}}</td>
