- Added $rootScope.BASEURL and changed rootScope.ROUTES to APIROUTES - Added ability to tweet out a link via Twitter share api to a character page

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/character.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/character.html
@@ -1,7 +1,7 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
     <h2>{{characterName}}</h2>
 
-
+    <a href="https://twitter.com/share?url={{twitterFullUrl}}">Tweet</a>
     <div class="container fade-in two">
 
         <div style="text-align:center">
