- Added ability to share character and ranking info via twitter link with official twitter share button

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/moveRanks.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/moveRanks.html
@@ -1,5 +1,8 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
     <h2>{{moveName}}</h2>
+    <br/>
+    <br/>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="jpol711" data-dnt="true">Tweet</a>
     <br />
     <br />
     <h6>Sorting by: {{predicate}}</h6>
