- Cleaned up routing again so that Swagger works - Commented out routes to get all moves and movement stats.  They take way too long and aren't very useful. - Removed all references that were not being used

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/moveRanks.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/moveRanks.html
@@ -2,7 +2,7 @@
     <h2>{{moveName}}</h2>
     <br/>
     <br/>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-via="jpol711" data-dnt="true">Tweet</a>
+    <!--<a href="https://twitter.com/share" class="twitter-share-button" data-via="jpol711" data-dnt="true">Tweet</a>-->
     <br />
     <br />
     <h6>Sorting by: {{predicate}}</h6>
