--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/movementRanks.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/movementRanks.html
@@ -2,7 +2,7 @@
     <h2>{{movementName}}</h2>
     <br/>
     <br/>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-via="jpol711" data-dnt="true">Tweet</a>
+    <!--<a href="https://twitter.com/share" class="twitter-share-button" data-via="jpol711" data-dnt="true">Tweet</a>-->
     <br/>
     <br/>
     <table class="table table-hover">
