--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/movementRanks.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/movementRanks.html
@@ -17,7 +17,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="item in movementData | orderBy:predicate:reverse" ng-click="goToCharacter(item)">
-                <td><img width="70" height="70" ng-src="{{item.characterThumbnailUrl}}" /></td>
+                <td><img width="70" height="70" ng-src="{{item.thumbnailUrl}}" /></td>
                 <td>{{item.value}}</td>
             </tr>
     </table>
