- Considered having admin page, but not locked into the idea yet. - Adjusted charactersRoster.html to not show list bullets in firefox - Sort head in character.html now floats: left.

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/character.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/character.html
@@ -29,7 +29,7 @@
             <br />
             <br />
             <br />
-            <h6>Sorting by: {{predicate}}</h6>
+            <h6 style="float:left;">Sorting by: {{predicate}}</h6>
             <table class="table table-hover">
                 <thead>
                     <tr>
