--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/charactersRoster.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/charactersRoster.html
@@ -1,6 +1,6 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
     <ul >
-        <li ng-repeat="item in characters" class="box fade-in one" style="float:left; margin: 5px;">
+        <li ng-repeat="item in characters" class="box fade-in one" style="display:inline-block; float:left; margin: 5px;">
             <a href="#character/{{item.id}}">
                 <img data-ng-src="{{item.thumbnailUrl}}"
                      title="{{item.name}}" />
