--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/mCharactersRoster.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/mCharactersRoster.html
@@ -1,11 +1,12 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
     <table ng-repeat="item in characters" class="table table-hover box fade-in one">
-        <tr>
+        <tr ng-click="goToCharacter(item)">
             <td>
-                <a href="#character/{{item.id}}">
-                    <img width="50" height="50" data-ng-src="{{item.thumbnailUrl}}"
-                         title="{{item.name}}" />
-                </a>
+                <img width="50" height="50" data-ng-src="{{item.thumbnailUrl}}"
+                     title="{{item.name}}" />
+                <!--<a href="#character/{{item.id}}">
+                    
+                </a>-->
                 <label>{{item.name}}</label>
             </td>
         </tr>
